
        * Fix gl engine vsync option pass-in in elm_win
        * Fix elm_progressbar_pulse() to abort if pulsing not enabled

2013-02-21 Carsten Haitzler (The Rasterman)

        * Improve a lot of the dnd infra to be more fully baked
        * Add elm_drop_target_add() elm_drop_target_del() and elm_drag_start()

2013-02-21  Jaehwan Kim

        * Fix scroller acceleration bug. It was accelerated even it's scrolled
        after finishing the previous scroll. This happens with page scroll enabled.

2013-02-25  Taehwan Kim

        * Fix 1byte invalid read & do memset, rewind if needed.

2013-02-26  Jaeun Choi

        * Add omit feature to elm_index.

2013-02-28  Jaehwan Kim

        * Add the option about sending signals in content_pos_set.
        When the scroller is resized, the signals("elm,action,scroll", "elm,edge,top" so on) shouldn't be sent,
        because it's not a scroll-action. So in this case, the content_pos_set should be called without the signals.

2013-02-28  ChunEon Park (Hermet)

        * Add elm_transit_smooth_set(), elm_transit_smooth_get()

2013-02-28  Jaehwan Kim

        * Fix the standard of scrollbar-calculation from the scroller's x to pan's x.
        The scrollbar have to sync with pan. if not, the scrollbar doesn't move even if the position of content moves.

2013-03-02  Brian J. Lovin

        * Fix initial value of the spinner on the first mouse move.

2013-03-04  Jaeun Choi

        * Fix elm_index to send a signal to the selected item in smart theme.

2013-03-04  WooHyun Jung

        * Focus highlight should not be showed on (0, 0).

2013-03-04  Junki Cho

        * Improved gengrid item append performance.

2013-03-05 Jiyoun Park

        * Fix elm_conform didn't set size hint when keypad on.

2013-03-05  Jaehwan Kim

        * Add edje_object_message_signal_process before edje_object_size_min_restricted_calc.
        If the min size is changed by edje signal in edc, the the function should be called before the calculation.